TEIID-494 ensured that batched update commands get evaluated if needed.  also refactored the planning logic of batched updates.